--- a/src/products.html
+++ b/src/products.html
@@ -30,7 +30,7 @@ and open the template in the editor.
                 <div class="collapse navbar-collapse" id="mynavbar">
                     <ul class="nav navbar-nav navbar-right">
 
-                        <li><a href="cart.html"><span class="glyphicon glyphicon-shopping-cart">-Cart-<span class="total">0</span> </span></a></li>
+                        <li><a><span class="glyphicon glyphicon-shopping-cart shopping">-Cart-<span class="quantity">0</span> </span></a></li>
                         <li><a href="logout.html"><span class="glyphicon glyphicon-log-out">-Logout</span></a></li>
                     </ul>
                 </div>
@@ -46,142 +46,40 @@ and open the template in the editor.
                 </p>
             </div>
             <div class="padding-20"></div>
-            <div class="row text-center">
-                <div class="col-md-3 col-sm-6">
-                    <div class="thumbnail">
-                        <img src="../img/camera.jpg" alt="Nikon">
-                        <div class="caption">
-                            <h3>Nikon NX21</h3>
-                            <p>Rs.36000.00</p>
-                            <button class="add-to-cart">Add to Cart</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-6 ">
-                    <div class="thumbnail">
-                        <img src="../img/camera2.jpg" alt="Sony">
-                        <div class="caption">
-                            <h3>Sony LDS</h3>
-                            <p>Rs.32000.00</p>
-                            <button class="add-to-cart">Add to Cart</button>
-                        </div>
-                    </div>
-                </div>
 
-                <div class="col-md-3 col-sm-6 ">
-                    <div class="thumbnail">
-                        <img src="../img/camera3.jpg" alt="cannon">
-                        <div class="caption">
-                            <h3>Cannon EDS70D</h3>
-                            <p>Rs.29000.00</p>
-                            <button class="add-to-cart">Add to Cart</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-6 ">
-                    <div class="thumbnail">
-                        <img src="../img/camera4.jpg" alt="Panasonic">
-                        <div class="caption">
-                            <h3>Lumix2</h3>
-                            <p>Rs.33000.00</p>
-                            <button class="add-to-cart">Add to Cart</button>
-                        </div>
-                    </div>
-                </div>
+
+
+            <div class="row text-center list1">
             </div>
-            <div class="row text-center">
-                <div class="col-md-3 col-sm-6">
-                    <div class="thumbnail">
-                        <img src="../img/watch.jpg" alt="watch">
-                        <div class="caption">
-                            <h3>Y&K</h3>
-                            <p>Rs.3000.00</p>
-                            <button class="add-to-cart">Add to Cart</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-6 ">
-                    <div class="thumbnail">
-                        <img src="../img/watch2.jpg">
-                        <div class="caption">
-                            <h3>Casio G-Shock</h3>
-                            <p>Rs.6000.00</p>
-                            <button class="add-to-cart">Add to Cart</button>
-                        </div>
-                    </div>
-                </div>
 
-                <div class="col-md-3 col-sm-6 ">
-                    <div class="thumbnail">
-                        <img src="../img/watch3.jpg" alt="Watch">
-                        <div class="caption">
-                            <h3>Omega</h3>
-                            <p>Rs.2000.00</p>
-                            <button class="add-to-cart">Add to Cart</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-6 ">
-                    <div class="thumbnail">
-                        <img src="../img/watch4.jpg " alt="Watch">
-                        <div class="caption">
-                            <h3>Diesel 3bar</h3>
-                            <p>Rs.3300.00</p>
-                            <button class="add-to-cart">Add to Cart</button>
-                        </div>
-                    </div>
-                </div>
+
+
+
+            <div class="row text-center list2">
             </div>
-            <div class="row text-center">
-                <div class="col-md-3 col-sm-6">
-                    <div class="thumbnail">
-                        <img src="../img/shirt.jpg" alt="Tommy">
-                        <div class="caption">
-                            <h3>Tommy Hilfigher</h3>
-                            <p>Rs.3600.00</p>
-                            <button class="add-to-cart">Add to Cart</button>
-                        </div>
-                    </div>
-                </div>
 
-                <div class="col-md-3 col-sm-6 ">
-                    <div class="thumbnail">
-                        <img src="../img/shirt2.jpg" alt="U.S.Polo">
-                        <div class="caption">
-                            <h3>U.S. Polo</h3>
-                            <p>Rs.970.00</p>
-                            <button class="add-to-cart">Add to Cart</button>
-                        </div>
-                    </div>
-                </div>
 
-                <div class="col-md-3 col-sm-6 ">
-                    <div class="thumbnail">
-                        <img src="../img/shirt3.jpg" alt="cannon">
-                        <div class="caption">
-                            <h3>Allen Solly</h3>
-                            <p>Rs.2900.00</p>
-                            <button class="add-to-cart">Add to Cart</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-6 ">
-                    <div class="thumbnail">
-                        <img src="../img/shirt4.jpg">
-                        <div class="caption">
-                            <h3>UCB</h3>
-                            <p>Rs.960.00</p>
-                            <button class="add-to-cart">Add to Cart</button>
-                        </div>
-                    </div>
-                </div>
 
+
+            <div class="row text-center list3">
             </div>
+
+
+
             <div class="padding-20"></div>
         </div>
     </main>
 
-    
+
+    <!-- card -->
+    <div class="card">
+        <h1>Cart</h1>
+        <ul class="listCard"></ul>
+        <div class="checkOut">
+            <div class="total">0</div>
+            <div class="closeShopping">close</div>
+        </div>
+    </div>
 
 
 
