made it more lifeless

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                 </div>
                 <div class="collapse navbar-collapse" id="mynavbar">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="src/sign.html"><span class="glyphicon glyphicon-user">SignUp</span></a></li>
-                        <li><a href="src/login.html"><span class="glyphicon glyphicon-log-in">Login</span></a></li>
+                        <li><a href="src/sign.html"><span class="glyphicon glyphicon-user">-SignUp</span></a></li>
+                        <li><a href="src/login.html"><span class="glyphicon glyphicon-log-in">-Login</span></a></li>
                     </ul>
                 </div>
             </div>
