--- a/src/products.html
+++ b/src/products.html
@@ -31,7 +31,7 @@ and open the template in the editor.
                     <ul class="nav navbar-nav navbar-right">
 
                         <li><a><span class="glyphicon glyphicon-shopping-cart shopping">-Cart-<span class="quantity">0</span> </span></a></li>
-                        <li><a href="logout.html"><span class="glyphicon glyphicon-log-out">-Logout</span></a></li>
+                        <li><a href="../index.html"><span class="glyphicon glyphicon-log-out">-Logout</span></a></li>
                     </ul>
                 </div>
             </div>
@@ -76,7 +76,7 @@ and open the template in the editor.
         <h1>Cart</h1>
         <ul class="listCard"></ul>
         <div class="checkOut">
-            <div class="total">0</div>
+            <div class="total">Rs.0</div>
             <div class="closeShopping">close</div>
         </div>
     </div>
